-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.3.0-beta1
-
Windows 10 64 bit
-
0652297f5adaacee924d3d4fbaaf1db205432f54
Steps to reproduce:
- have a project opened that produces output [e.g. soft asserts as used inside QC]
- run the app, wait for respective output to be printed
- try to click it
- works
- stop/crash the application (doesn't matter whether the app is closed cleanly or not)
- try to click the link again
Current result:
- link does no more work..
- is duplicated by
-
QTCREATORBUG-18351 Error links to qml line/file in application output don't work
-
- Closed
-
-
QTCREATORBUG-18393 Cannot double click test failures to take me to the code any more
-
- Closed
-
-
QTCREATORBUG-18413 link to source in the application output doesn't work anymore
-
- Closed
-
-
QTCREATORBUG-18484 QML error links in Application panel not clickable
-
- Closed
-
-
QTCREATORBUG-18334 Links on Application Output panel not works whenever application exits
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-18134 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
197927,2 | ProjectExplorer: Do not clear formatter when process finishes | master | qt-creator/qt-creator | Status: ABANDONED | -2 | 0 |
198021,3 | AppOutputPane: Do not reset the formatter after the RC has finished | 4.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |