AppOutputPane: Do not reset the formatter after the RC has finished

Otherwise, clicking on links will have no effect. This feature was
broken with commit 113134b3b6.

Task-number: QTCREATORBUG-18134
Task-number: QTCREATORBUG-18334
Change-Id: I3cf5d8a9b3957a3f06cb3dbba40bb2dd16a9f8a9
Reviewed-by: Orgad Shaneh <orgads@gmail.com>
Reviewed-by: Tobias Hunger <tobias.hunger@qt.io>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>